--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
       href="https://fonts.googleapis.com/css2?family=Barriecito&family=Cabin+Sketch&family=Lora&family=Pacifico&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barriecito&family=Cabin+Sketch&family=Lora&family=Pacifico&family=Vollkorn+SC:wght@600&display=swap"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="../css/styles.css" />
     <title>B.C.S.M | Homepage</title>
@@ -35,10 +41,78 @@
       </div>
     </header>
     <main>
-      <img
-        src="Images/Home/home_hero-min.jpg"
-        alt="Picture of the childrens area of the brønnøysund community science museum"
-      />
+      <div class="hero-image">
+        <img
+          src="Images/Home/home_hero-min.jpg"
+          alt="Picture of the childrens area of the brønnøysund community science museum"
+        />
+      </div>
+      <h1>Brønnøysund Community Science Museum</h1>
+      <div class="wrapper">
+        <section class="container">
+          <div class="image">
+            <img
+              src="Images/Home/home_museum-min.jpg"
+              alt="Picture showing the museum sign of B.C.S.M."
+            />
+          </div>
+          <div class="textfield-purple">
+            <p>
+              Over the course of human history, science has developed from our
+              early understanding of fire, wind, water, and earth to exploring
+              everything from galaxies far away to the very building blocks of
+              life itself.
+            </p>
+            <p>
+              The aim of our museum is to create a space where everyone can
+              experience the wonders of our discoveries and perhaps even ignite
+              a lifelong passion to continue the exploration of the world around
+              us.
+            </p>
+          </div>
+        </section>
+        <h2 class="h2-center">"Explore Together</h2>
+        <section class="link-row">
+          <div class="link">
+            <h2>Explore</h2>
+            <img
+              src="Images/Home/home_explore-min.jpg"
+              alt="Image of a kid with VR glasses"
+            />
+            <a href="explore.html" class="cta">Find out more</a>
+          </div>
+          <div class="link">
+            <h2>Explore</h2>
+            <img
+              src="Images/Home/home_explore-min.jpg"
+              alt="Image of a kid with VR glasses"
+            />
+            <a href="explore.html" class="cta">Find out more</a>
+          </div>
+          <div class="link">
+            <h2>Explore</h2>
+            <img
+              src="Images/Home/home_explore-min.jpg"
+              alt="Image of a kid with VR glasses"
+            />
+            <a href="explore.html" class="cta">Find out more</a>
+          </div>
+          <div class="link">
+            <h2>Explore</h2>
+            <img
+              src="Images/Home/home_explore-min.jpg"
+              alt="Image of a kid with VR glasses"
+            />
+            <a href="explore.html" class="cta">Find out more</a>
+          </div>
+        </section>
+        <div class="divider">
+          <img
+            src="Images/Design/Home-skille.png"
+            alt="Divider for the home page"
+          />
+        </div>
+      </div>
     </main>
   </body>
 </html>
