--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
       href="https://fonts.googleapis.com/css2?family=Barriecito&family=Cabin+Sketch&family=Lora&family=Pacifico&family=Vollkorn+SC:wght@600&display=swap"
       rel="stylesheet"
     />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barriecito&family=Cabin+Sketch&family=Indie+Flower&family=Lora&family=Pacifico&family=Vollkorn+SC:wght@600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="../css/styles.css" />
     <title>B.C.S.M | Homepage</title>
   </head>
@@ -32,7 +37,7 @@
           <div class="header-nav">
             <a href="index.html">Home</a>
             <a href="explore.html">Explore</a>
-            <a href="exibition.html">Exibitions</a>
+            <a href="exhibition.html">Exhibitions</a>
             <a href="events.html">Events</a>
             <a href="visit.html">Visit</a>
             <a href="getinvolved.html">Get Involved</a>
@@ -82,34 +87,63 @@
             <a href="explore.html" class="cta">Find out more</a>
           </div>
           <div class="link">
-            <h2>Explore</h2>
+            <h2>Exhibitions</h2>
             <img
-              src="Images/Home/home_explore-min.jpg"
-              alt="Image of a kid with VR glasses"
+              src="Images/Home/home_exhibitions-min.jpg"
+              alt="Image of on of our great exhibitions in the museum"
             />
-            <a href="explore.html" class="cta">Find out more</a>
+            <a href="exhibition.html" class="cta">Find out more</a>
           </div>
           <div class="link">
-            <h2>Explore</h2>
+            <h2>Events</h2>
             <img
-              src="Images/Home/home_explore-min.jpg"
-              alt="Image of a kid with VR glasses"
+              src="Images/Home/home_events-min.jpg"
+              alt="Image of a man standing in front of a large museum room"
             />
-            <a href="explore.html" class="cta">Find out more</a>
+            <a href="events.html" class="cta">Find out more</a>
           </div>
           <div class="link">
-            <h2>Explore</h2>
+            <h2>Visit</h2>
             <img
-              src="Images/Home/home_explore-min.jpg"
-              alt="Image of a kid with VR glasses"
+              src="Images/Home/home_visit-min.jpg"
+              alt="Image of ceiling art from one of the museum's halls"
             />
-            <a href="explore.html" class="cta">Find out more</a>
+            <a href="visit.html" class="cta">Find out more</a>
           </div>
         </section>
         <div class="divider">
           <img
             src="Images/Design/Home-skille.png"
             alt="Divider for the home page"
+          />
+        </div>
+        <h3 class="center-text">
+          Come join us at the Community Science Museum where we are committed to
+          making science accessible to all.
+        </h3>
+        <section class="container">
+          <div class="image">
+            <img
+              src="Images/Home/home_boy-in-museum-min.jpg"
+              alt="Picture showing a boy standing in one of the corridors of B.C.S.M."
+            />
+          </div>
+          <div class="textfield-purple">
+            <p>
+              We believe science should not be confined to the textbook, but
+              brought to life through exhibits. This is why we have over 1000
+              different exhibits on the many varied subjects of science to
+              explore. Many of these exhibits are designed for you to interact
+              with and play around to see science come to life (apart from the
+              dinosaur exhibits – they only come to life at night when
+              everyone’s gone home).
+            </p>
+          </div>
+        </section>
+        <div class="back-to-top">
+          <img
+            src="Images/Design/Back-to-the-top-Button.png"
+            alt="Back to the top button"
           />
         </div>
       </div>
