--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div>
     </header>
     <main>
-      <div class="hero-image">
+      <div class="hero-image" id="back-to-top">
         <img
           src="Images/Home/home_hero-min.jpg"
           alt="Picture of the childrens area of the brønnøysund community science museum"
@@ -140,13 +140,48 @@
             </p>
           </div>
         </section>
-        <div class="back-to-top">
-          <img
-            src="Images/Design/Back-to-the-top-Button.png"
-            alt="Back to the top button"
-          />
+        <div class="back-to-top-button">
+          <a href="#back-to-top">
+            <img
+              src="Images/Design/Back-to-the-top-Button.png"
+              alt="Back to the top button"
+            />
+          </a>
         </div>
       </div>
     </main>
+    <footer>
+      <div class="wrapper">
+        <div class="footer-content">
+          <div class="footer1">
+            <h2>Contact</h2>
+            <div class="footer-contact-icon">
+              <img src="Images/Icons/telephone-icon.svg" alt="Telephone icon" />
+              <p>+47 987 65 432</p>
+            </div>
+            <div class="footer-contact-icon">
+              <img src="Images/Icons/mail-icon.svg" alt="Mail icon" />
+              <p>fictional@bcsm.com</p>
+            </div>
+            <div class="footer-contact-icon">
+              <img src="Images/Icons/location-icon.svg" alt="Location icon" />
+              <p>Fictional Street 1, 8907 Brønnøysund</p>
+            </div>
+          </div>
+          <div class="footer2">
+            <img
+              src="Images/Design/Logo.png"
+              alt="Logo for Brønnøysund Community Science Museum"
+            />
+          </div>
+          <div class="footer3">
+            <img src="Images/Icons/facebook-icon.svg" alt="Facebook Icon" />
+            <img src="Images/Icons/instagram-icon.svg" alt="Instagram Icon" />
+            <img src="Images/Icons/youtube-icon.svg" alt="Youtube Icon" />
+          </div>
+        </div>
+        <p class="copy">©SP1 SL23</p>
+      </div>
+    </footer>
   </body>
 </html>
