--- a/index.html
+++ b/index.html
@@ -34,14 +34,20 @@
               alt="Logo for Brønnøysund Community Science Museum"
             />
           </div>
-          <div class="header-nav">
+          <input type="checkbox" id="menu-checkbox" />
+          <label for="menu-checkbox" class="hamburger-icon"
+            ><img
+              src="Images/Icons/Hamburger-icon.png"
+              alt="Hamburger-menu icon"
+          /></label>
+          <nav class="header-nav">
             <a href="index.html">Home</a>
             <a href="explore.html">Explore</a>
             <a href="exhibition.html">Exhibitions</a>
             <a href="events.html">Events</a>
             <a href="visit.html">Visit</a>
             <a href="getinvolved.html">Get Involved</a>
-          </div>
+          </nav>
         </div>
       </div>
     </header>
