--- a/explore.html
+++ b/explore.html
@@ -60,14 +60,147 @@
       </div>
       <h1>Explore</h1>
       <div class="wrapper">
-        <div class="back-to-top-button">
-          <a href="#back-to-top">
+        <div class="explore-row">
+          <div class="explore1 image">
             <img
-              src="Images/Design/Back-to-the-top-Button.png"
-              alt="Back to the top button"
+              src="Images/Explore/explore_for_kids-min-min.png"
+              alt="Picture of a kid sitting in a play-room reading a comic book"
             />
-          </a>
+            <h2>Kids</h2>
+          </div>
+          <div class="explore2 image">
+            <img
+              src="Images/Explore/explore_for_teachers-min-min.png"
+              alt="Picture of a teacher standing in our aquatic room"
+            />
+            <h2>Teachers</h2>
+          </div>
+          <div class="explore3 image">
+            <img
+              src="Images/Explore/explore_for_researchers-min-min.png"
+              alt="Picture of a researcher in front of a quantum accelerator"
+            />
+            <h2>Researchers</h2>
+          </div>
         </div>
+      </div>
+      <section class="blue-background">
+        <div class="wrapper">
+          <div class="center-text">
+            <h2>For Kids</h2>
+            <h3>Are you a young person looking to learn more about science?</h3>
+            <h3>Come on down to our museum, there’s plenty to see and do.</h3>
+          </div>
+          <div class="image-row container">
+            <div class="explore-image-row image">
+              <img
+                src="Images/Explore/explore_for_kids1-min.jpg"
+                alt="Picture of three potions on a table"
+              />
+              <p>Learn how to brew your own potions</p>
+            </div>
+            <div class="explore-image-row image">
+              <img
+                src="Images/Explore/explore_for_kids2-min.jpg"
+                alt="Picture of three potions on a table"
+              />
+              <p>Lots of learning activities for kids</p>
+            </div>
+            <div class="explore-image-row image">
+              <img
+                src="Images/Explore/explore_for_kids3-min.jpg"
+                alt="Picture of three potions on a table"
+              />
+              <p>Old Friend from the Ice Age movies</p>
+            </div>
+            <div class="explore-image-row image">
+              <img
+                src="Images/Explore/explore_for_kids4-min.jpg"
+                alt="Picture of three potions on a table"
+              />
+              <p>“Fake snake in the lake” Exhibition</p>
+            </div>
+          </div>
+          <div class="text-container">
+            <div class="textbox">
+              <p>
+                You can learn about Newtonian physics from our bumper swing, or
+                why not travel back in time and meet our resident Woolly
+                Mammoth? Our exhibits are designed to be accessible for
+                interested minds, so make sure you come ready to learn and
+                explore.
+              </p>
+            </div>
+            <div class="textbox">
+              <p>
+                We also have the Young Stars club which meets once a week on a
+                Saturday between 10:00 and 13:00 where you’ll get to explore and
+                experiment with our team of experts.
+              </p>
+            </div>
+          </div>
+          <section class="iandt">
+            <div class="image">
+              <img
+                src="Images/Explore/explore_for_kids5-min.jpg"
+                alt="Picture of a teenager painting wearing VR-glasses"
+              />
+              <p>
+                During the school holidays we run special holiday clubs where
+                you can join other children your age to go on a journey of
+                discovery.
+              </p>
+            </div>
+            <div class="imgage-and-text image">
+              <img
+                src="Images/Explore/explore_for_kids6-min.jpg"
+                alt="Picture of three potions on a table"
+              />
+              <p>
+                Each holiday we pick a new theme to explore. To find out more
+                about the holiday club and how you can join, send us a message.
+              </p>
+            </div>
+          </section>
+        </div>
+      </section>
+      <div class="divider">
+        <img
+          src="Images/Design/Teacher-skille.png"
+          alt="Divider with teacher icon"
+        />
+      </div>
+      <div class="wrapper">
+        <section class="container">
+          <div class="image">
+            <img
+              src="Images/Explore/explore_for_teachers1-min.jpg"
+              alt="Picture showing a boy standing in one of the corridors of B.C.S.M."
+            />
+          </div>
+          <div class="textfield-grey">
+            <p>
+              As a community-driven museum, we want to work with schools to
+              create places of learning and exploring. Our team are on hand to
+              give your students guided tours of the museum, teach them in our
+              learning laboratory, and provide great video presentations that
+              will excite and inspire them.
+            </p>
+            <p>
+              Please get in touch with us here to find out more about our
+              facilities and to arrange a time to bring your students through
+              for a visit.
+            </p>
+          </div>
+        </section>
+      </div>
+      <div class="back-to-top-button">
+        <a href="#back-to-top">
+          <img
+            src="Images/Design/Back-to-the-top-Button.png"
+            alt="Back to the top button"
+          />
+        </a>
       </div>
     </main>
     <footer>
