--- a/explore.html
+++ b/explore.html
@@ -62,24 +62,30 @@
       <div class="wrapper">
         <div class="explore-row">
           <div class="explore1 image">
-            <img
-              src="Images/Explore/explore_for_kids-min-min.png"
-              alt="Picture of a kid sitting in a play-room reading a comic book"
-            />
+            <a href="#for-kids">
+              <img
+                src="Images/Explore/explore_for_kids-min-min.png"
+                alt="Picture of a kid sitting in a play-room reading a comic book"
+              />
+            </a>
             <h2>Kids</h2>
           </div>
           <div class="explore2 image">
-            <img
-              src="Images/Explore/explore_for_teachers-min-min.png"
-              alt="Picture of a teacher standing in our aquatic room"
-            />
+            <a href="#for-teachers">
+              <img
+                src="Images/Explore/explore_for_teachers-min-min.png"
+                alt="Picture of a teacher standing in our aquatic room"
+              />
+            </a>
             <h2>Teachers</h2>
           </div>
           <div class="explore3 image">
-            <img
-              src="Images/Explore/explore_for_researchers-min-min.png"
-              alt="Picture of a researcher in front of a quantum accelerator"
-            />
+            <a href="#for-researchers">
+              <img
+                src="Images/Explore/explore_for_researchers-min-min.png"
+                alt="Picture of a researcher in front of a quantum accelerator"
+              />
+            </a>
             <h2>Researchers</h2>
           </div>
         </div>
@@ -87,33 +93,33 @@
       <section class="blue-background">
         <div class="wrapper">
           <div class="center-text">
-            <h2>For Kids</h2>
+            <h2 id="for-kids">For Kids</h2>
             <h3>Are you a young person looking to learn more about science?</h3>
             <h3>Come on down to our museum, there’s plenty to see and do.</h3>
           </div>
           <div class="image-row container">
-            <div class="explore-image-row image">
+            <div class="img-and-text image">
               <img
                 src="Images/Explore/explore_for_kids1-min.jpg"
                 alt="Picture of three potions on a table"
               />
               <p>Learn how to brew your own potions</p>
             </div>
-            <div class="explore-image-row image">
+            <div class="img-and-text image">
               <img
                 src="Images/Explore/explore_for_kids2-min.jpg"
                 alt="Picture of three potions on a table"
               />
               <p>Lots of learning activities for kids</p>
             </div>
-            <div class="explore-image-row image">
+            <div class="img-and-text image">
               <img
                 src="Images/Explore/explore_for_kids3-min.jpg"
                 alt="Picture of three potions on a table"
               />
               <p>Old Friend from the Ice Age movies</p>
             </div>
-            <div class="explore-image-row image">
+            <div class="img-and-text image">
               <img
                 src="Images/Explore/explore_for_kids4-min.jpg"
                 alt="Picture of three potions on a table"
@@ -140,7 +146,7 @@
             </div>
           </div>
           <section class="iandt">
-            <div class="image">
+            <div class="image-and-text">
               <img
                 src="Images/Explore/explore_for_kids5-min.jpg"
                 alt="Picture of a teenager painting wearing VR-glasses"
@@ -151,7 +157,7 @@
                 discovery.
               </p>
             </div>
-            <div class="imgage-and-text image">
+            <div class="image-and-text">
               <img
                 src="Images/Explore/explore_for_kids6-min.jpg"
                 alt="Picture of three potions on a table"
@@ -164,11 +170,14 @@
           </section>
         </div>
       </section>
-      <div class="divider">
+      <div class="divider" id="for-teachers">
         <img
           src="Images/Design/Teacher-skille.png"
           alt="Divider with teacher icon"
         />
+      </div>
+      <div class="center-text">
+        <h2>For teachers</h2>
       </div>
       <div class="wrapper">
         <section class="container">
@@ -194,6 +203,42 @@
           </div>
         </section>
       </div>
+      <div class="divider" id="for-researchers">
+        <img
+          src="Images/Design/Researcher-skille.png"
+          alt="Divider with researcher icon"
+        />
+      </div>
+      <section class="blue-background">
+        <div class="wrapper">
+          <div class="center-text">
+            <h2>For researchers</h2>
+          </div>
+          <div class="iandt">
+            <div class="image">
+              <img
+                src="Images/Explore/explore_for_researchers1-min.jpg"
+                alt="Picture of a human model with internal organs showing"
+              />
+            </div>
+            <div class="text">
+              <p>
+                Are you looking to get involved with our team of researchers and
+                academics? Our museum offers various ways for you to use our
+                resources and contribute towards them. We have online records,
+                laboratory space, and a working relationship with a number of
+                universities around the country.
+              </p>
+            </div>
+            <div class="image">
+              <img
+                src="Images/Explore/explore_for_researchers2-min.jpg"
+                alt="Picture of a model of a human heart"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
       <div class="back-to-top-button">
         <a href="#back-to-top">
           <img
