--- a/exhibition.html
+++ b/exhibition.html
@@ -59,7 +59,102 @@
         />
       </div>
       <h1>Exhibition Spaces</h1>
+      <section class="link-bar">
+        <div class="wrapper">
+          <nav class="exhibition-links">
+            <a href="#cosmology">Cosmology</a>
+            <a href="#evolution">Evolution</a>
+            <a href="">Biology and Medicine</a>
+            <a href=""> Robotics and AI</a>
+            <a href="">Ecology</a>
+          </nav>
+        </div>
+      </section>
       <div class="wrapper">
+        <div class="divider dt">
+          <img
+            src="Images/Design/Cosmology-Skille.png"
+            alt="Divider with planet icon"
+            id="cosmology"
+          />
+          <h2>Cosmology</h2>
+        </div>
+        <section class="container iandt">
+          <div class="image">
+            <img
+              src="Images/Exhibition/exhibitions_cosmology-min.jpg"
+              alt="Picture showing the night sky with a swirl of stars"
+            />
+          </div>
+          <div class="textfield-dark-green cost">
+            <p>
+              Explore the wonders of our cosmos. Our fantastic exhibition, ‘The
+              Sky Above Us’, explores the night sky and what we can see and know
+              about the universe around us. We’ll locate the various
+              constellations and galaxies that can be seen and learn a bit about
+              the early navigators who used the stars to travel by.
+            </p>
+            <p>
+              Follow the journey of our solar exploration: from early Arab
+              traders, to Galileo’s telescope, to the latest exploration of the
+              planets in our solar system.
+            </p>
+          </div>
+        </section>
+        <div class="divider dt">
+          <img
+            src="Images/Design/Evolution-skille.png"
+            alt="Divider with evolution icon"
+            id="evolution"
+          />
+          <h2>Evolution</h2>
+        </div>
+        <section class="container iandt">
+          <div class="textfield-dark-green evot">
+            <p>
+              For centuries, philosophers and scientists have wrestled with the
+              question of our origins. Where do we come from and how did we get
+              here? Since Darwin proposed his theory of evolution we have had a
+              framework for exploring and understanding our place in this world.
+            </p>
+            <img
+              src="Images/Icons/evolution2-icon.svg"
+              alt="Icon showing evolution"
+              class="evot-icon"
+            />
+          </div>
+          <div class="textfield-dark-green evot">
+            <p>
+              Discover the origins of life on this planet and how the species we
+              know today have evolved our time. You can also take some time to
+              meet a few of the creatures who didn’t survive, including our
+              Woolly Mammoth, the Dodos, and a number of dinosaurs too.
+            </p>
+          </div>
+        </section>
+        <div class="image-row container">
+          <div class="img-and-text image">
+            <img
+              src="Images/Exhibition/exhibition_evolution1-min.jpg"
+              alt="Picture of a giant ant figure in B.C.S.M"
+            />
+            <p>Our Giant ant collection</p>
+          </div>
+          <div class="img-and-text image">
+            <img
+              src="Images/Exhibition/exhibition_evolution2-min.jpg"
+              alt="Picture of three skeletons showing evolution of man"
+            />
+            <p>"Evolution in bones" exhibition"</p>
+          </div>
+          <div class="img-and-text image">
+            <img
+              src="Images/Exhibition/exhibition_evolution3-min.jpg"
+              alt="Picture of three skeletons showing evolution of man"
+            />
+            <p>"Prehistoric marine life "</p>
+          </div>
+        </div>
         <div class="back-to-top-button">
           <a href="#back-to-top">
             <img
