--- a/exhibition.html
+++ b/exhibition.html
@@ -64,9 +64,9 @@
           <nav class="exhibition-links">
             <a href="#cosmology">Cosmology</a>
             <a href="#evolution">Evolution</a>
-            <a href="">Biology and Medicine</a>
-            <a href=""> Robotics and AI</a>
-            <a href="">Ecology</a>
+            <a href="#biology-and-medicine">Biology and Medicine</a>
+            <a href="#robotics-and-ai"> Robotics and AI</a>
+            <a href="#ecology">Ecology</a>
           </nav>
         </div>
       </section>
@@ -155,14 +155,118 @@
             <p>"Prehistoric marine life "</p>
           </div>
         </div>
-        <div class="back-to-top-button">
-          <a href="#back-to-top">
-            <img
-              src="Images/Design/Back-to-the-top-Button.png"
-              alt="Back to the top button"
-            />
-          </a>
+        <div class="divider dt">
+          <img
+            src="Images/Design/Biology-Skille.png"
+            alt="Divider with biology icon"
+            id="biology-and-medicine"
+          />
+          <h2>Biology and Medicine</h2>
         </div>
+        <section class="iandt">
+          <div class="image-and-text">
+            <img
+              src="Images/Exhibition/exhibition_biology-and-medicine1-min.jpg"
+              alt="Picture of nautical biology"
+            />
+            <p>
+              From micro-organisms to the human body, major breakthroughs in
+              biology are offering us unique insights into the great wonders of
+              the tiny world.
+            </p>
+          </div>
+          <div class="image-and-text">
+            <img
+              src="Images/Exhibition/exhibition_biology-and-medicine2-min.jpg"
+              alt="Picture of a man looking into a microscope"
+            />
+            <p>
+              For many people their life expectancy is much longer and their
+              quality of life much improved, thanks to the growth of our
+              understanding of medicine. Over a series of exhibits we explore
+              the history of medicine and take a look at some major
+              breakthroughs including the discovery of penicillin and the first
+              heart transplant.
+            </p>
+          </div>
+          <div class="image-and-text">
+            <img
+              src="Images/Exhibition/exhibition_biology-and-medicine3-min.jpg"
+              alt="Picture of a microscopical animal"
+            />
+            <p>
+              Many of our great medicinal discoveries have come not only from
+              the lab, but also from observing animals in the wild. Often our
+              fellow creatures have beat us to it.
+            </p>
+          </div>
+        </section>
+        <div class="divider dt">
+          <img
+            src="Images/Design/Robotics-skille.png"
+            alt="Divider with robotic arm icon"
+            id="robotics-and-ai"
+          />
+          <h2>Robotics and AI</h2>
+        </div>
+        <section class="container iandt">
+          <div class="image">
+            <img
+              src="Images/Exhibition/exhibition_robots-and-ai-min.jpg"
+              alt="Picture of a kid learning about robotics production"
+            />
+          </div>
+          <div class="textfield-dark-green robt">
+            <p>
+              The information revolution is here and robotics and artificial
+              intelligence are the science of the future. From useful home
+              applications of AI to industrial uses of robotics, the future is
+              here. You can even say hello and shake the hand of Rob the Robot.
+            </p>
+          </div>
+        </section>
+        <div class="divider dt">
+          <img
+            src="Images/Design/Ecology-skille.png"
+            alt="Divider with ecology icon, a triangle with repeating arrows "
+            id="ecology"
+          />
+          <h2>Ecology</h2>
+        </div>
+        <section class="iandt ecology">
+          <div class="image-and-text">
+            <img
+              src="Images/Exhibition/exhibition_ecology1-min.jpg"
+              alt="Picture of windmills on a snow covered mountain"
+            />
+            <p>
+              As we learn more and more of the impact humans are having on the
+              planet, the more important it becomes that scientists explore how
+              to create a sustainable future not just for humans but for the
+              whole planet.
+            </p>
+          </div>
+          <div class="image-and-text">
+            <img
+              src="Images/Exhibition/exhibition_ecology2-min.jpg"
+              alt="Art in flowers spelling out: Earth Day Everyday "
+            />
+            <p>
+              In our ecology section of the museum, we unpack the dangers we
+              currently face including global warming, extinction of species,
+              and pollution. But we also focus on the positive ways we can all
+              contribute to a brighter future.
+            </p>
+          </div>
+        </section>
+      </div>
+      <div class="back-to-top-button">
+        <a href="#back-to-top">
+          <img
+            src="Images/Design/Back-to-the-top-Button.png"
+            alt="Back to the top button"
+          />
+        </a>
       </div>
     </main>
     <footer>
