--- a/events.html
+++ b/events.html
@@ -59,7 +59,54 @@
         />
       </div>
       <h1>Special Events</h1>
-      <div class="wrapper">
+      <section class="green-background">
+        <div class="wrapper">
+          <div class="container">
+            <div class="image">
+              <img
+                src="Images/Events/events-professor-min.jpg"
+                alt="Picture of professor of aeronautics Prof Sheila Widnall"
+                />
+            </div>
+            <div class="text">
+              <h3>Visiting Professor of Aeronautics</h3>
+              <p>It is our pleasure to announce that Prof Sheila Widnall from the Massachusetts Institute of Technology will be delivering 3 lectures on the development of aeronautics and where the future lies in this exciting ‘space’.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="site-background">
+        <div class="wrapper">
+          <div class="container">
+            <div class="text">
+              <h3>Night in the Museum</h3>
+              <p>Get your family together for an exciting night in the museum as you sleep over beside dinosaurs and science displays. Bring your own sleeping bag and get ready to rough it as we go exploring the wonders of science.</p>
+            </div>
+            <div class="image">
+              <img
+              src="Images/Events/events_night-at-the-museum-min.png"
+              alt="Picture of a man sitting in a museum hall"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="green-background">
+        <div class="wrapper">
+          <div class="container">
+            <div class="image">
+              <img
+                src="Images/Events/events-lightning-min.jpg"
+                alt="Picture of a ball of lightning"
+                />
+            </div>
+            <div class="text">
+              <h3>Energetica Exhibition on Loan</h3>
+              <p>On loan from the NEMO Science Museum in Amsterdam, the Energetica exhibition is coming to the Community Science Museum. It’s a series of installations that allow visitors to experience the power of the elements as we harness them. From solar energy powering lighting, to ‘Wind Island’ that shows how turbines are able to use and control wind to create power.</p>
+            </div>
+          </div>
+        </div>
+      </section>
         <div class="back-to-top-button">
           <a href="#back-to-top">
             <img
