--- a/visit.html
+++ b/visit.html
@@ -60,6 +60,37 @@
       </div>
       <h1>Visit</h1>
       <div class="wrapper">
+        <section class="container iandt visit">
+          <div class="textfield-blue location">
+            <h2>Location</h2>
+            <p>The museum is located at: </p>
+            <span>Fictional Street 1</span>
+            <span>8907 Brønnøysund</span>
+            <span>NO-Norway</span>
+          </div>
+          <div class="textfield-blue admission">
+            <h2>Admission</h2>
+            <p>The entrance is free for all.
+              There are guided tours of the museum that leave every hour. These tours are 70 NOK per person and include a handy printed guide of the museum.</p>
+            <p>If you would like to organise a guided tour for your group of 6 or more people, please contact us to arrange the tour.</p>
+          </div>
+          <div class="textfield-blue hours">
+            <h2>Hours</h2>
+            <span>Monday: Closed</span>
+            <span>Tuesday: 10:00 – 16:00</span>
+            <span>Wednesday: 10:00 – 16:00</span>
+            <span>Thursday: 10:00 – 16:00 </span>
+            <span>Friday: 10:00 – 19:00</span>
+            <span>Saturday: 9:00 – 16:00</span>
+            <span>Sunday: 9:00 – 13:00</span>
+          </div>
+        </section>
+        <div class="divider">
+          <img
+            src="Images/Design/Cafe-skille.png"
+            alt="Divider with a dinosaur scull icon"/>
+        </div>
+      </div wrapper>
         <div class="back-to-top-button">
           <a href="#back-to-top">
             <img
@@ -68,7 +99,6 @@
             />
           </a>
         </div>
-      </div>
     </main>
     <footer>
       <div class="wrapper">
