--- a/exhibition.html
+++ b/exhibition.html
@@ -132,7 +132,7 @@
             </p>
           </div>
         </section>
-        <div class="image-row container">
+        <div class="iandt">
           <div class="img-and-text image">
             <img
               src="Images/Exhibition/exhibition_evolution1-min.jpg"
