--- a/explore.html
+++ b/explore.html
@@ -97,7 +97,7 @@
             <h3>Are you a young person looking to learn more about science?</h3>
             <h3>Come on down to our museum, there’s plenty to see and do.</h3>
           </div>
-          <div class="image-row container">
+          <div class="iandt">
             <div class="img-and-text image">
               <img
                 src="Images/Explore/explore_for_kids1-min.jpg"
