--- a/visit.html
+++ b/visit.html
@@ -60,7 +60,7 @@
       </div>
       <h1>Visit</h1>
       <div class="wrapper">
-        <section class="container iandt visit">
+        <section class="iandt visit">
           <div class="textfield-blue location">
             <h2>Location</h2>
             <p>The museum is located at: </p>
@@ -89,6 +89,39 @@
           <img
             src="Images/Design/Cafe-skille.png"
             alt="Divider with a dinosaur scull icon"/>
+        </div>
+        <section class="visit-iandt">
+          <div class="image-and-text">
+            <h2>Accessibility</h2>
+            <img
+              src="Images/Visit/visit_accessibility-min.jpg"
+              alt="Picture of a handicap space on the asphalt"
+            />
+            <p>The museum has wheelchair accessibility ramps. It also has audio guides and braille display signs for the visually impaired.</p>
+          </div>
+          <div class="image-and-text">
+            <h2>Food and drink</h2>
+            <img
+              src="Images/Visit/visit_food-and-drink-min.jpg"
+              alt="Picture of baked goods in the B.C.S.M. cafe"
+            />
+            <p>There is a café attached to the museum where you can get light lunches, soft drinks, coffee, snacks and more.</p>
+          </div>
+          <div class="image-and-text">
+            <h2>Shop</h2>
+            <img
+              src="Images/Visit/visit_shop-min.jpg"
+              alt="Picture of the B.C.S.M. gift-shop window"
+            />
+            <p>Our shop offers a range of memorabilia from the museum as well as great gifts and activity packs that allow you to continue to explore science even after you’ve left the museum.</p>
+          </div>
+        </section>
+        <div class="divider dt">
+          <img
+            src="Images/Design/Contact-Skille.png"
+            alt="Divider with a contact icon"
+          />
+          <h2>Contact</h2>
         </div>
       </div wrapper>
         <div class="back-to-top-button">
