--- a/visit.html
+++ b/visit.html
@@ -123,6 +123,20 @@
           />
           <h2>Contact</h2>
         </div>
+            <form class="contact-form" method="POST">
+              <section class="fieldset">
+                <label for="name">Name</label>
+                <input type="text" name="name" id="name" class="form-input">
+                <label for="phone">Phone number</label>
+                <input type="tel" name="phone" id="phone" class="form-input">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" class="form-input">
+              </section>
+              <section class="fieldset">
+                <label for="message">Message</label>
+                <textarea id="message" name="message" cols="30" rows="10" class="form-input"></textarea>
+              </section>
+            </form>
       </div wrapper>
         <div class="back-to-top-button">
           <a href="#back-to-top">
