--- a/getinvolved.html
+++ b/getinvolved.html
@@ -59,15 +59,93 @@
         />
       </div>
       <h1>Get Involved</h1>
-      <div class="wrapper">
-        <div class="back-to-top-button">
-          <a href="#back-to-top">
-            <img
-              src="Images/Design/Back-to-the-top-Button.png"
-              alt="Back to the top button"
-            />
-          </a>
+      <section class="pink-background">
+        <div class="wrapper">
+          <h2 class="center-text">Support</h2>
+          <div class="container">
+            <div class="image">
+              <img
+                src="Images/Get Involved/get-involved_support-min.jpg"
+                alt="Picture of a typewriter with the word Donation printed out"
+              />
+            </div>
+            <div class="text">
+              <p>
+                There are various ways you can support the museum. Donations are
+                very welcome and are an important way we keep this museum open
+                and accessible to the whole community.
+              </p>
+              <p>
+                You can also support us by donating items of interest to the
+                museum’s collections. If you have some item or collection that
+                you think others would enjoy, please let us know by contacting
+                our Collections Department and they will be able to assist you.
+              </p>
+            </div>
+          </div>
         </div>
+      </section>
+      <section class="site-background">
+        <div class="wrapper">
+          <h2 class="center-text">Volunteer</h2>
+          <div class="container">
+            <div class="text">
+              <p>
+                A number of people volunteer their time and effort to keep the
+                displays in good order and ready for visitors to come and enjoy.
+                Volunteering has its perks including getting to see behind the
+                scenes of a working museum, access to staff-only lectures, and a
+                monthly lunch where all staff and volunteers come together to
+                discuss ideas for future exhibits and strategies for the museum.
+              </p>
+              <p>
+                You can help volunteer in a number of different spheres. Please
+                contact us if you’d like to find out more about how you can get
+                involved.
+              </p>
+            </div>
+            <div class="image">
+              <img
+                src="Images/Get Involved/get-involved_volunteer-min.jpg"
+                alt="Picture of a man standing in front of a dinosaur exhibition"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="pink-background">
+        <div class="wrapper">
+          <h2 class="center-text">Internships</h2>
+          <div class="container">
+            <div class="image">
+              <img
+                src="Images/Get Involved/get-involved_interns-min.jpg"
+                alt="Picture of 5 people sitting on a bench and smiling with their hands around each other"
+              />
+            </div>
+            <div class="text">
+              <p>
+                Are you interested in working in a museum? Do you enjoy the fun
+                and excitement of sharing the wonders of nature with people?
+                Well you could be just the right person to enjoy an internship
+                at the museum.
+              </p>
+              <p>
+                You’ll be learning from a number of different academics and
+                people who are passionate about science and sharing it with the
+                wider community.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <div class="back-to-top-button">
+        <a href="#back-to-top">
+          <img
+            src="Images/Design/Back-to-the-top-Button.png"
+            alt="Back to the top button"
+          />
+        </a>
       </div>
     </main>
     <footer>
