--- a/events.html
+++ b/events.html
@@ -44,7 +44,7 @@
             <a href="index.html">Home</a>
             <a href="explore.html">Explore</a>
             <a href="exhibition.html">Exhibitions</a>
-            <a href="events.html">Events</a>
+            <a href="events.html" id="active">Events</a>
             <a href="visit.html">Visit</a>
             <a href="getinvolved.html">Get Involved</a>
           </nav>
@@ -107,7 +107,7 @@
           </div>
         </div>
       </section>
-        <div class="back-to-top-button">
+        <div class="back-to-top-button imagehov"> 
           <a href="#back-to-top">
             <img
               src="Images/Design/Back-to-the-top-Button.png"
