--- a/exhibition.html
+++ b/exhibition.html
@@ -43,7 +43,7 @@
           <nav class="header-nav">
             <a href="index.html">Home</a>
             <a href="explore.html">Explore</a>
-            <a href="exhibition.html">Exhibitions</a>
+            <a href="exhibition.html" id="active">Exhibitions</a>
             <a href="events.html">Events</a>
             <a href="visit.html">Visit</a>
             <a href="getinvolved.html">Get Involved</a>
@@ -260,7 +260,7 @@
           </div>
         </section>
       </div>
-      <div class="back-to-top-button">
+      <div class="back-to-top-button imagehov">
         <a href="#back-to-top">
           <img
             src="Images/Design/Back-to-the-top-Button.png"
