--- a/explore.html
+++ b/explore.html
@@ -42,7 +42,7 @@
           /></label>
           <nav class="header-nav">
             <a href="index.html">Home</a>
-            <a href="explore.html">Explore</a>
+            <a href="explore.html" id="active">Explore</a>
             <a href="exhibition.html">Exhibitions</a>
             <a href="events.html">Events</a>
             <a href="visit.html">Visit</a>
@@ -61,7 +61,7 @@
       <h1>Explore</h1>
       <div class="wrapper">
         <div class="explore-row">
-          <div class="explore1 image">
+          <div class="explore1 image imagehov">
             <a href="#for-kids">
               <img
                 src="Images/Explore/explore_for_kids-min-min.png"
@@ -70,7 +70,7 @@
             </a>
             <h2>Kids</h2>
           </div>
-          <div class="explore2 image">
+          <div class="explore2 image imagehov">
             <a href="#for-teachers">
               <img
                 src="Images/Explore/explore_for_teachers-min-min.png"
@@ -79,7 +79,7 @@
             </a>
             <h2>Teachers</h2>
           </div>
-          <div class="explore3 image">
+          <div class="explore3 image imagehov">
             <a href="#for-researchers">
               <img
                 src="Images/Explore/explore_for_researchers-min-min.png"
@@ -239,7 +239,7 @@
           </div>
         </div>
       </section>
-      <div class="back-to-top-button">
+      <div class="back-to-top-button imagehov">
         <a href="#back-to-top">
           <img
             src="Images/Design/Back-to-the-top-Button.png"
