--- a/getinvolved.html
+++ b/getinvolved.html
@@ -46,7 +46,7 @@
             <a href="exhibition.html">Exhibitions</a>
             <a href="events.html">Events</a>
             <a href="visit.html">Visit</a>
-            <a href="getinvolved.html">Get Involved</a>
+            <a href="getinvolved.html" id="active">Get Involved</a>
           </nav>
         </div>
       </div>
@@ -139,7 +139,7 @@
           </div>
         </div>
       </section>
-      <div class="back-to-top-button">
+      <div class="back-to-top-button imagehov">
         <a href="#back-to-top">
           <img
             src="Images/Design/Back-to-the-top-Button.png"
