--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               alt="Hamburger-menu icon"
           /></label>
           <nav class="header-nav">
-            <a href="index.html">Home</a>
+            <a href="index.html" id="active">Home</a>
             <a href="explore.html">Explore</a>
             <a href="exhibition.html">Exhibitions</a>
             <a href="events.html">Events</a>
@@ -83,37 +83,45 @@
           </div>
         </section>
         <h2 class="h2-center">"Explore Together</h2>
-        <section class="link-row">
+        <section class="link-row imagehov">
           <div class="link">
             <h2>Explore</h2>
-            <img
-              src="Images/Home/home_explore-min.jpg"
-              alt="Image of a kid with VR glasses"
-            />
+            <a href="explore.html">
+              <img
+                src="Images/Home/home_explore-min.jpg"
+                alt="Image of a kid with VR glasses"
+              />
+            </a>
             <a href="explore.html" class="cta">Find out more</a>
           </div>
           <div class="link">
             <h2>Exhibitions</h2>
-            <img
-              src="Images/Home/home_exhibitions-min.jpg"
-              alt="Image of on of our great exhibitions in the museum"
-            />
+            <a href="exhibition.html">
+              <img
+                src="Images/Home/home_exhibitions-min.jpg"
+                alt="Image of on of our great exhibitions in the museum"
+              />
+            </a>
             <a href="exhibition.html" class="cta">Find out more</a>
           </div>
           <div class="link">
             <h2>Events</h2>
-            <img
-              src="Images/Home/home_events-min.jpg"
-              alt="Image of a man standing in front of a large museum room"
-            />
+            <a href="events.html">
+              <img
+                src="Images/Home/home_events-min.jpg"
+                alt="Image of a man standing in front of a large museum room"
+              />
+            </a>
             <a href="events.html" class="cta">Find out more</a>
           </div>
           <div class="link">
             <h2>Visit</h2>
-            <img
-              src="Images/Home/home_visit-min.jpg"
-              alt="Image of ceiling art from one of the museum's halls"
-            />
+            <a href="visit.html">
+              <img
+                src="Images/Home/home_visit-min.jpg"
+                alt="Image of ceiling art from one of the museum's halls"
+              />
+            </a>
             <a href="visit.html" class="cta">Find out more</a>
           </div>
         </section>
@@ -146,7 +154,7 @@
             </p>
           </div>
         </section>
-        <div class="back-to-top-button">
+        <div class="back-to-top-button imagehov">
           <a href="#back-to-top">
             <img
               src="Images/Design/Back-to-the-top-Button.png"
@@ -162,7 +170,7 @@
           <div class="footer1">
             <h2>Contact</h2>
             <div class="footer-contact-icon">
-              <img src="Images/Icons/telephone-icon.svg" alt="Telephone icon" />
+              <img src="Images/Icons/telephone-icon.png" alt="Telephone icon" />
               <p>+47 987 65 432</p>
             </div>
             <div class="footer-contact-icon">
